5.94_01
    - worked around 5.005_03's lack of a $Config{siteprefix} and
      $Config{sitebin}.

5.93_01 Mon May  6 00:54:39 EDT 2002
    - fixed basic.t for limited depth VMS systems
    * MM_BeOS was totally hosed by a typo.
    - Made the ExtUtils::Command docs clear about how things come
      from @ARGV not @_.
    - Quieted nmake banners in disttest

    * Backporting to 5.005_03
    - 'require 5.006' statements to 5.00503
    - Removing uses of File::Spec::Functions
    - Adding MODE arg to mkdir()
    - Changing uses of 'our' to 'use vars'
    - Changing uses of 'no warnings' to 'local $SIG{__WARN__}'
    - Changing 3-arg opens to 2-arg
    - Changing 'open my $fh' to 'open FH'
    - 5.005_03's File::Find doesn't have 'no_chdir'

5.92_01 Mon Apr 29 23:09:38 EDT 2002
    - Fixing case of modules with no .pm files on VMS.
    - LDLOADLIBS fix for NetBSD and easier overriding (bleadperl 16233)
    * syncing in MM_MacOS from pudge.
    - syncing in NetWare fixes (16266 & 16190)
    - Cleaning up MM_NW5.pm somewhat.

5.91_02 Wed Apr 24 01:29:56 EDT 2002
    - Adjustments to tests for inclusion in the core.

5.91_01 Wed Apr 24 00:11:06 EDT 2002
    [[ API Changes ]]
    * A failing Makefile.PL in a subdir will now kill the whole
      makefile making process.
    * "make install PREFIX=something" will no longer work.  Sorry.
    - Now supporting the usevendorprefix %Config setting
    - Tests now guaranteed to run in alphabetical order.
    - Allowing $VERSION = 0.

    [[ Bug Fixes ]]
    - Missing prerequisite warning malformatted.
    - INSTALL*MAN*DIR and INST_MAN*DIR weren't allowed on the command 
      line.
    * For years now skipcheck() has been returning a different
      value than what was documented.
    - Partially reversing Ken's "speed up ExtUtils::Manifest" patch
      from 5.51_01 so MANIFEST overrides MANIFEST.SKIP.
    * Fixed PREFIXification so it works on Win32.
    * Fixed PREFIXification so it works on VMS.